Avoid direct number object instantiation - causes warning on Java 16+